# podflow

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: podcasts.yaml  settings.yaml  thought_leaders.yaml
scripts/: setup_google_auth.py  vps-setup.sh
src/podflow/: __init__.py  cli.py  config.py  db.py  drive.py  idea_bank.py  models.py  utils.py
src/podflow/analysis/: models.py  prompts.py
src/podflow/email/: builder.py  sender.py
src/podflow/email/templates/: daily_brief.html  weekly_digest.html
src/podflow/pipeline/: analyzer.py  detector.py  downloader.py  enricher.py  fetcher.py  free_transcripts.py  storer.py  transcriber.py
src/podflow/web/: app.py
src/podflow/web/static/: app.js
src/podflow/web/templates/: base.html  card.html  detail.html  feed.html  leaders.html  login.html  search.html  settings.html  today.html
